--- a/style.css
+++ b/style.css
@@ -1,1 +1,7 @@
-
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+    background-color: blue;
+    margin: 0;
+    padding: 0;
+}
